# arch_mai

./: CMakeLists.txt  Makefile  README.md  auth_main.cpp  event_main.cpp  product_main.cpp  start.sh  user_main.cpp
auth_service/: auth_rest.h  auth_service.h
benchmark/: benchmark.sh  cache_test.lua  cache_test_search.lua  create_users.sh  output.txt  performance.md
config/: config.cpp  config.h
database/: cache.cpp  cache.h  database.cpp  database.h  product.cpp  product.h  user.cpp  user.h
docker/: .env  docker-compose.yaml
docker/auth_service/: Dockerfile
docker/event_listener/: Dockerfile
docker/mariadb/: Dockerfile
docker/mariadb/rollout/sequence/: sequence.sql
docker/mariadb/rollout/user/: rollout.sql
docker/product_service/: Dockerfile
docker/proxysql/: Dockerfile  proxysql.cnf
docker/user_service/: Dockerfile
docs/: components.md  context.md  index.yaml  task.md
product_service/: product_rest.h  product_service.h
service_excpetion/: service_exceptions.h
user_service/: user_rest.h  user_service.h
utils/: request_utils.h  token_utils.h  validation_utils.h
